# splatoon3-stats-extractor

./: README.md  docker-compose.yml  pyproject.toml
resource/: input_1.txt  input_en_2.txt  input_ja_1.txt
src/: const.py  convert.py  fetcher.py  indexer.py  main.py  transformer.py
